<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddPhoto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <include layout="@layout/navigation_bar" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo"
            android:gravity="center_horizontal"
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/thanksReceipt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="130dp"
            android:text="@string/thanksSubmission"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/receiptText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="145dp"
            android:text="@string/receiptText"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:paddingTop="100dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/reference"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="245dp"
            android:text="@string/reference"
            android:textSize="20sp"
            android:gravity="start"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:paddingTop="100dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="295dp"
            android:text="@string/emailAddress"
            android:textSize="20sp"
            android:gravity="start"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:paddingTop="100dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <Button
            android:id="@+id/selectAnotherPhoto"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal|center"
            android:background="#4095D5"
            android:paddingBottom="0dp"
            android:text="@string/selectAnotherPhoto"
            android:paddingLeft="50dp"
            android:paddingStart="50dp"
            android:paddingRight="50dp"
            android:paddingEnd="50dp"
            android:drawableEnd="@drawable/go_arrow"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

</android.support.v7.widget.FitWindowsLinearLayout>